<resources>

    <string name="app_name">HTC Gesture Modifier</string>
    <string name="pref_copyright_description">Copyright © 2014 Mohammad Abu-Garbeyyeh\nView more apps and modules</string>
    <string name="swipe_up_action_title">Swipe up action</string>
    <string name="swipe_up_action_summary">What to do when you swipe up</string>
    <string name="swipe_left_action_title">Swipe left action</string>
    <string name="swipe_left_action_summary">What to do when you swipe left, normally this send you to the homescreen</string>
    <string name="swipe_right_action_title">Swipe right action</string>
    <string name="swipe_right_action_summary">What to do when you swipe right, normally this sends you to BlinkFeed</string>
    <string name="swipe_down_action_title">Swipe down action</string>
    <string name="swipe_down_action_summary">What to do when you swipe down, normally this opens the Voice Dialer</string>
    <string name="double_tap_action_title">Double tap action</string>
    <string name="double_tap_action_summary">What to do when you double tap, normally this unlocks the device only</string>
    <string name="camera_action_title">Camera action</string>
    <string name="camera_action_summary">What to do when you use the camera launch gesture</string>

    <string-array name="action_entires">
        <item>Do not override</item>
        <item>Google Voice Search</item>
        <item>Next song</item>
        <item>Previous song</item>
        <item>Play/Pause</item>
    </string-array>
    <string-array name="action_values">
        <item>default</item>
        <item>voice_search</item>
        <item>next_song</item>
        <item>prev_song</item>
        <item>play_pause</item>
    </string-array>

    <string name="menu_playstore">Play Store</string>
    <string name="menu_xposed">Xposed Modules</string>

    <string-array name="my_apps" translatable="false">
        <item>@string/menu_playstore</item>
        <item>@string/menu_xposed</item>
    </string-array>

</resources>